--- a/package.json
+++ b/package.json
@@ -116,5 +116,8 @@
       "last 1 safari version"
     ]
   },
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "event-emitter": "^0.3.5"
+  }
 }
