--- a/src/constants/abis/config.json
+++ b/src/constants/abis/config.json
@@ -1,5 +1,4 @@
-[
-{
+[{
   "contracts": {
     "main": {
       "0xB06Eb970a623AbEd8630bbb6B11a6071A352A554": {
@@ -10,7 +9,8 @@
         "pairs": [
           "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
           "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
-        ]
+        ],
+        "type": "single"
       },
       "0x928EE7ffF283abD3D8C365F39Cd08F346bd31A76": {
         "networkId": 1,
@@ -20,7 +20,8 @@
         "pairs": [
           "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
           "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
-        ]
+        ],
+        "type": "single"
       },
       "0xc2077bDdEeB34D3a1372A147d6Db93Ccc9686854": {
         "networkId": 1,
@@ -32,7 +33,8 @@
           "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
           "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
         ],
-        "totalReward": 100000
+        "totalReward": 100000,
+        "type": "single"
       },
       "0x9640B393a016ba171a15BB2E68A8B3327Ef7ee29": {
         "networkId": 1,
@@ -43,7 +45,62 @@
           "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
           "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
         ],
-        "totalReward": 300000
+        "totalReward": 300000,
+        "type": "single"
+      },
+      "0xCBdCc62feF478D0e94112AD5123c33edAe6D820f": {
+        "networkId": 1,
+        "pairName": "ETH/FUSE",
+        "LPToken": "0x4ce3687fed17e19324f23e305593ab13bbd55c4d",
+        "contractAddress": "0xCBdCc62feF478D0e94112AD5123c33edAe6D820f",
+        "pairs": [
+          "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
+          "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
+        ],
+        "totalReward": 500000,
+        "type": "single"
+      },
+      "0xd9D5Fda4D82693eEAa4289A83914DdC6C072cb8B": {
+        "networkId": 1,
+        "pairName": "USDC/FUSE",
+        "LPToken": "0x611805Ce4071C096f5b44557b45685802d8a46FE",
+        "contractAddress": "0xd9D5Fda4D82693eEAa4289A83914DdC6C072cb8B",
+        "pairs": [
+          "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
+          "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
+        ],
+        "totalReward": 500000,
+        "type": "single"
+      },
+      "0xb54536E0c4CA3FA54d394DB6B7c41f70AeC334FF": {
+        "networkId": 1,
+        "pairName": "ETH/FUSE",
+        "LPToken": "0x4ce3687fed17e19324f23e305593ab13bbd55c4d",
+        "contractAddress": "0xb54536E0c4CA3FA54d394DB6B7c41f70AeC334FF",
+        "pairs": [
+          "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
+          "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
+        ],
+        "rewards": [
+          "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
+        ],
+        "totalReward": 100000,
+        "type": "multi"
+      },
+      "0xA4c9BEc5dbd6f3497301b01D62B9AA40c3E214F6": {
+        "networkId": 1,
+        "pairName": "USDC/FUSE",
+        "LPToken": "0x611805Ce4071C096f5b44557b45685802d8a46FE",
+        "contractAddress": "0xA4c9BEc5dbd6f3497301b01D62B9AA40c3E214F6",
+        "pairs": [
+          "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
+          "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
+        ],
+        "rewards": [
+          "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d"
+        ],
+        "totalReward": 100000,
+        "type": "multi"
       }
     },
     "fuse": {
@@ -57,8 +114,7 @@
           "0xd8Bf72f3e163B9CF0C73dFdCC316417A5ac20670",
           "0x620fd5fa44BE6af63715Ef4E65DDFA0387aD13F5"
         ],
-        "start":0.0000000016059708,
-        "duration": 0.0000000000012096
+        "type": "single"
       },
       "0x3e1DE36098965f09836028354e13Ad945dDB84f0": {
         "networkId": 122,
@@ -70,8 +126,7 @@
           "0x33284f95ccb7B948d9D352e1439561CF83d8d00d",
           "0xd8Bf72f3e163B9CF0C73dFdCC316417A5ac20670"
         ],
-        "start": 0.0000000016059708,
-        "duration": 0.0000000000012096
+        "type": "single"
       },
       "0x4957d310D6704DbdAb18F7D651F655aa59C6059a": {
         "networkId": 122,
@@ -83,8 +138,7 @@
           "0x620fd5fa44BE6af63715Ef4E65DDFA0387aD13F5",
           "0xFaDbBF8Ce7D5b7041bE672561bbA99f79c532e10"
         ],
-        "start": 0.0000000016059708,
-        "duration": 0.0000000000012096
+        "type": "single"
       },
       "0x49aE27DCB1A7621073e6Cb23Ce4A16423993DD95": {
         "networkId": 122,
@@ -96,22 +150,7 @@
           "0x94Ba7A27c7A95863d1bdC7645AC2951E0cca06bA",
           "0xFaDbBF8Ce7D5b7041bE672561bbA99f79c532e10"
         ],
-        "start":0.0000000016059708,
-        "duration": 0.0000000000012096
-      },
-      "0x57095EcA8B76f26DB5E95A00EEbdaeEdC62a5ee9": {
-        "networkId": 122,
-        "pairName": "USDC/FUSE",
-        "LPToken": "0x9f17b1895633E855b8b1C1D0Ade9B3B72EB0590C",
-        "uniPairToken": "0x611805ce4071c096f5b44557b45685802d8a46fe",
-        "contractAddress": "0x57095EcA8B76f26DB5E95A00EEbdaeEdC62a5ee9",
-        "pairs": [
-          "0x0BE9e53fd7EDaC9F859882AfdDa116645287C629",
-          "0x620fd5fa44BE6af63715Ef4E65DDFA0387aD13F5"
-        ],
-        "totalReward": 150000,
-        "start": 0.0000000016119288,
-        "duration": 0.000000000007776
+        "type": "single"
       },
       "0x4EE7127d43B385C77308bdF9E9d59258ab11e836": {
         "networkId": 122,
@@ -124,8 +163,7 @@
           "0x620fd5fa44be6af63715ef4e65ddfa0387ad13f5"
         ],
         "totalReward": 50000,
-        "start": 0.0000000016132284,
-        "duration": 0.000000000002592
+        "type": "single"
       },
       "0x835b51352f906ff7632A38F20137218309895506": {
         "networkId": 122,
@@ -138,8 +176,7 @@
           "0x620fd5fa44be6af63715ef4e65ddfa0387ad13f5"
         ],
         "totalReward": 35000,
-        "start": 0.0000000016150428,
-        "duration": 0.000000000002592
+        "type": "single"
       },
       "0x9091D40Ed50842BE9BDEDA5fEF6CfF82485De741": {
         "networkId": 122,
@@ -152,8 +189,7 @@
           "0xd8Bf72f3e163B9CF0C73dFdCC316417A5ac20670"
         ],
         "totalReward": 25000,
-        "start": 0.0000000016162524,
-        "duration": 0.000000000002592
+        "type": "single"
       },
       "0x1795AC4015CA9E818371Ed22f1bf913f596d204F": {
         "networkId": 122,
@@ -166,8 +202,7 @@
           "0xd8Bf72f3e163B9CF0C73dFdCC316417A5ac20670"
         ],
         "totalReward": 25000,
-        "start": 0.0000000016162524,
-        "duration": 0.000000000002592
+        "type": "single"
       },
       "0x471C46C37958EB26FE4EB57D3FBd387172cB7434": {
         "networkId": 122,
@@ -180,8 +215,20 @@
           "0x620fd5fa44be6af63715ef4e65ddfa0387ad13f5"
         ],
         "totalReward": 25000,
-        "start":0.0000000016162524,
-        "duration": 0.000000000002592
+        "type": "single"
+      },
+      "0x57095EcA8B76f26DB5E95A00EEbdaeEdC62a5ee9": {
+        "networkId": 122,
+        "pairName": "USDC/FUSE",
+        "LPToken": "0x9f17b1895633E855b8b1C1D0Ade9B3B72EB0590C",
+        "uniPairToken": "0x611805ce4071c096f5b44557b45685802d8a46fe",
+        "contractAddress": "0x57095EcA8B76f26DB5E95A00EEbdaeEdC62a5ee9",
+        "pairs": [
+          "0x0BE9e53fd7EDaC9F859882AfdDa116645287C629",
+          "0x620fd5fa44BE6af63715Ef4E65DDFA0387aD13F5"
+        ],
+        "totalReward": 150000,
+        "type": "single"
       },
       "0x4Bd7dc50B49d018FDE10a1ae6b29f09E175b85fC": {
         "networkId": 122,
@@ -194,8 +241,31 @@
           "0x0be9e53fd7edac9f859882afdda116645287c629"
         ],
         "totalReward": 100000,
-        "start": 0.0000000016197084,
-        "duration": 0.0000000000018144
+        "type": "single"
+      },
+      "0xAAb4FB30aD9c20EFFDA712c0fFC24f77b1B5439d": {
+        "networkId": 122,
+        "pairName": "WETH/FUSE",
+        "contractAddress": "0xAAb4FB30aD9c20EFFDA712c0fFC24f77b1B5439d",
+        "LPToken": "0x75e24462108E49B71278c93b49B35A5837c0547C",
+        "pairs": [
+          "0xa722c13135930332Eb3d749B2F0906559D2C5b99",
+          "0x0be9e53fd7edac9f859882afdda116645287c629"
+        ],
+        "totalReward": 150000,
+        "type": "single"
+      },
+      "0xf14D745a4D264255F758B541BB1F61EbC589EA25": {
+        "networkId": 122,
+        "pairName": "fUSD/FUSE",
+        "contractAddress": "0xf14D745a4D264255F758B541BB1F61EbC589EA25",
+        "LPToken": "0xcDd8964BA8963929867CAfFCf5942De4F085bFB7",
+        "pairs": [
+          "0x249be57637d8b013ad64785404b24aebae9b098b",
+          "0x0be9e53fd7edac9f859882afdda116645287c629"
+        ],
+        "totalReward": 150000,
+        "type": "single"
       },
       "0x04Ee5DE43332aF99eeC2D40de19962AA1cC583EC": {
         "networkId": 122,
@@ -208,8 +278,7 @@
           "0x620fd5fa44be6af63715ef4e65ddfa0387ad13f5"
         ],
         "totalReward": 75000,
-        "start": 0.00000000191867975,
-        "duration": 0.0000000000078624
+        "type": "single"
       },
       "0x65995B106988E9aCd15998a5DF95aDe89b6511c8": {
         "networkId": 122,
@@ -220,46 +289,175 @@
           "0x249BE57637D8B013Ad64785404b24aeBaE9B098B",
           "0x6acb34b1Df86E254b544189Ec32Cf737e2482058"
         ],
-        "totalReward": 75000,
-        "start": 0.00000000161867975,
-        "duration": 0.000000000007776000
+        "type": "single"
       },
-      "0xf14D745a4D264255F758B541BB1F61EbC589EA25": {
+      "0xC68eAa3c93cA8BB829243EA2cdA215c944500b2a": {
+        "networkId": 122,
+        "pairName": "DEXT/FUSE",
+        "contractAddress": "0xC68eAa3c93cA8BB829243EA2cdA215c944500b2a",
+        "LPToken": "0xCD0643b3B2481ee9280eADbE8b54104bfDee9bdB",
+        "pairs": [
+          "0x92c9DD8F3C443d75949A1B46F2878cacc1089de5",
+          "0x0be9e53fd7edac9f859882afdda116645287c629"
+        ],
+        "type": "single"
+      },
+      "0xFF1F9fd96BA115376042c8893B438D03eedd5503": {
         "networkId": 122,
         "pairName": "fUSD/FUSE",
-        "contractAddress": "0xf14D745a4D264255F758B541BB1F61EbC589EA25",
+        "contractAddress": "0xFF1F9fd96BA115376042c8893B438D03eedd5503",
         "LPToken": "0xcDd8964BA8963929867CAfFCf5942De4F085bFB7",
         "pairs": [
           "0x249be57637d8b013ad64785404b24aebae9b098b",
           "0x0be9e53fd7edac9f859882afdda116645287c629"
         ],
-        "totalReward": 150000,
-        "start": 0.00000000161867975,
-        "duration": 0.0000000000078624
+        "type": "single"
       },
-      "0xAAb4FB30aD9c20EFFDA712c0fFC24f77b1B5439d": {
+      "0x66B393872d11468A3266E6a6a85328Bc5A6C51bD": {
         "networkId": 122,
         "pairName": "WETH/FUSE",
-        "contractAddress": "0xAAb4FB30aD9c20EFFDA712c0fFC24f77b1B5439d",
+        "contractAddress": "0x66B393872d11468A3266E6a6a85328Bc5A6C51bD",
         "LPToken": "0x75e24462108E49B71278c93b49B35A5837c0547C",
         "pairs": [
-          "0x0be9e53fd7edac9f859882afdda116645287c629",
-          "0xa722c13135930332Eb3d749B2F0906559D2C5b99"
-          
+          "0xa722c13135930332Eb3d749B2F0906559D2C5b99",
+          "0x0be9e53fd7edac9f859882afdda116645287c629"
         ],
-        "totalReward": 150000,
-        "start": 0.00000000161867975,
-        "duration": 0.0000000000078624
+        "type": "single"
+      },
+      "0xF449846eCe9c8d9438e1E940840EE59314AF4502": {
+        "networkId": 122,
+        "pairName": "WBTC/WETH",
+        "LPToken": "0x79fb917292f841ab64941c04acdf5f9059aa24e7",
+        "contractAddress": "0xF449846eCe9c8d9438e1E940840EE59314AF4502",
+        "pairs": [
+          "0x33284f95ccb7B948d9D352e1439561CF83d8d00d",
+          "0xa722c13135930332Eb3d749B2F0906559D2C5b99"
+        ],
+        "type": "single"
+      },
+      "0x45609C92B46F8f9d101D421f155eD558a043AF99": {
+        "networkId": 122,
+        "pairName": "WBTC/WETH",
+        "LPToken": "0x79fb917292f841ab64941c04acdf5f9059aa24e7",
+        "contractAddress": "0x45609C92B46F8f9d101D421f155eD558a043AF99",
+        "pairs": [
+          "0x33284f95ccb7B948d9D352e1439561CF83d8d00d",
+          "0xa722c13135930332Eb3d749B2F0906559D2C5b99"
+        ],
+        "rewards": [
+          "0x0BE9e53fd7EDaC9F859882AfdDa116645287C629"
+        ],
+        "totalReward": 100000,
+        "type": "multi"
+      },
+      "0xbCa51ae3896f4033fb7B467BD3ab4A4ff27f3a3E": {
+        "networkId": 122,
+        "pairName": "WETH/FUSE",
+        "contractAddress": "0xbCa51ae3896f4033fb7B467BD3ab4A4ff27f3a3E",
+        "LPToken": "0x75e24462108E49B71278c93b49B35A5837c0547C",
+        "pairs": [
+          "0xa722c13135930332Eb3d749B2F0906559D2C5b99",
+          "0x0be9e53fd7edac9f859882afdda116645287c629"
+        ],
+        "rewards": [
+          "0x0BE9e53fd7EDaC9F859882AfdDa116645287C629"
+        ],
+        "totalReward": 100000,
+        "type": "multi"
+      },
+      "0x076BDeA1fD4695BDEF9Ba4579463BC4B3C97d645": {
+        "networkId": 122,
+        "pairName": "fUSD/FUSE",
+        "contractAddress": "0x076BDeA1fD4695BDEF9Ba4579463BC4B3C97d645",
+        "LPToken": "0xcDd8964BA8963929867CAfFCf5942De4F085bFB7",
+        "pairs": [
+          "0x249be57637d8b013ad64785404b24aebae9b098b",
+          "0x0be9e53fd7edac9f859882afdda116645287c629"
+        ],
+        "rewards": [
+          "0x0BE9e53fd7EDaC9F859882AfdDa116645287C629"
+        ],
+        "totalReward": 100000,
+        "type": "multi"
+      }
+      
+    },
+    
+    "bsc": {
+      "0xEEBa1e9334b55958664108b13F016A18994eB818": {
+        "networkId": 56,
+        "pairName": "FUSE/BNB",
+        "contractAddress": "0xEEBa1e9334b55958664108b13F016A18994eB818",
+        "LPToken": "0x6483f166b9e4310a165a55fea04f867499aded06",
+        "pairs": [
+          "0x5857c96DaE9cF8511B08Cb07f85753C472D36Ea3",
+          "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c"
+        ],
+        "totalReward": 55000,
+        "type": "single"
+      },
+      "0x4d2Cd192d2ea321707bb52b266DBeaB95FB94d47": {
+        "networkId": 56,
+        "pairName": "FUSE/BNB",
+        "contractAddress": "0x4d2Cd192d2ea321707bb52b266DBeaB95FB94d47",
+        "LPToken": "0x6483f166b9e4310a165a55fea04f867499aded06",
+        "pairs": [
+          "0x5857c96DaE9cF8511B08Cb07f85753C472D36Ea3",
+          "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c"
+        ],
+        "totalReward": 50000,
+        "type": "single"
+      },
+      "0x34f37aa7ec34752b7e46fbfdb9d0db802202b59e": {
+        "networkId": 56,
+        "pairName": "ETH/FUSE",
+        "contractAddress": "0x34f37aa7ec34752b7e46fbfdb9d0db802202b59e",
+        "LPToken": "0x26963a1ADf4738a11c8e2192ffE1ff51aaCd942c",
+        "pairs": [
+          "0x2170Ed0880ac9A755fd29B2688956BD959F933F8",
+          "0x5857c96DaE9cF8511B08Cb07f85753C472D36Ea3"
+        ],
+        "totalReward": 50000,
+        "type": "single"
+      },
+      "0x50a7be05872466031611013da54c9cc5e1166319": {
+        "networkId": 56,
+        "pairName": "USDC/FUSE",
+        "contractAddress": "0x50a7be05872466031611013da54c9cc5e1166319",
+        "LPToken": "0x14143271537db4bb6926d0e68490c532dbeb075f",
+        "pairs": [
+          "0x8AC76a51cc950d9822D68b83fE1Ad97B32Cd580d",
+          "0x5857c96DaE9cF8511B08Cb07f85753C472D36Ea3"
+        ],
+        "totalReward": 50000,
+        "type": "single"
+      },
+      "0x4f18D7FA5996337ba787f82C4D4758A6e655D6B3": {
+        "networkId": 56,
+        "pairName": "FUSE/BNB",
+        "contractAddress": "0x4f18D7FA5996337ba787f82C4D4758A6e655D6B3",
+        "LPToken": "0x6483F166b9E4310A165a55FEa04F867499aded06",
+        "pairs": [
+          "0x5857c96DaE9cF8511B08Cb07f85753C472D36Ea3",
+          "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c"
+        ],
+        "rewards": [
+          "0x5857c96dae9cf8511b08cb07f85753c472d36ea3"
+        ],
+        "totalReward": 75000,
+        "type": "multi"
       }
     }
   },
   "rewardTokens": {
     "1": "0x970b9bb2c0444f5e81e9d0efb84c8ccdcdcaf84d",
+    "56": "0x5857c96dae9cf8511b08cb07f85753c472d36ea3",
     "122": "0x0BE9e53fd7EDaC9F859882AfdDa116645287C629"
   },
   "web3": {
     "fuseProvider": "https://rpc.fuse.io",
-    "ethereumProvider": "https://eth-mainnet.gateway.pokt.network/v1/5f7cca33b90218002e9ce9be"
+    "ethereumProvider": "https://eth-mainnet.gateway.pokt.network/v1/5f7cca33b90218002e9ce9be",
+    "bscProvider": "https://bscnode.liquify.info"
   },
   "api": {
     "graph": {
@@ -274,6 +472,12 @@
         "subgraphs": {
           "fuseswap": "/fuseswap"
         }
+      },
+      "pancakeswap": {
+        "url": "https://api.thegraph.com/subgraphs/name/pancakeswap/exchange",
+        "subgraphs": {
+          "exchange": "/exchange"
+        }
       }
     }
   },
@@ -284,5 +488,4 @@
       "debug": true
     }
   }
-}
-]
+}]
