change text from uniswap, fuseswap to fusefi

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@uniswap/interface",
-  "description": "Uniswap Interface",
+  "name": "@fuseio/fusefi-interface",
+  "description": "FuseFi Interface",
   "homepage": ".",
   "private": true,
   "devDependencies": {
